--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,6 @@ Werkzeug==0.14.1
 marshmallow==2.18.0
 python-chess==0.25.1
 gunicorn==19.9.0
+firebase-admin==2.16.0
+google-cloud-firestore==0.31.0
 flask-cors==3.0.7
